--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,83 @@ html{
     background: rgb(255, 73, 73);
     color: #fff;
 }
+
+#products{
+    height: 90vh;
+    background: #fcfcfc;
+}
+
+.products_container{
+    padding-top: 2rem;
+    text-align: center;
+}
+
+.products_title{
+    margin-bottom: 18px;
+}
+
+.burger_container{
+    margin: 60px auto;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.burger_container img{
+    height: 135px;
+    margin-top: 10px;
+    width: 230px;
+}
+
+.content{
+    background: #fff;
+    text-align: center;
+    color: #000;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 20px;
+    margin-right: 13px;
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.content h3{
+    padding-top: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.price{
+    background: rgb(255, 73, 73);
+    padding: 4px 20px;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 400;
+    font-size: 1.2rem;
+    margin-bottom: 8px;
+}
+
+.stars{
+    margin-top: 17px;
+    padding-bottom: 20px;
+    color: #ffd700;
+}
+
+.btn_{
+    text-decoration: none;
+    font-weight: 300;
+    border: 2px solid rgb(255, 73, 73);
+    color: #000;
+    padding: 3px 20px;
+    transition: .8s;
+}
+
+.btn_:hover{
+    background: rgb(255, 73, 73);
+    color: #fff;
+}
