--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ html{
     justify-content: center;
     align-items: center;
     width: 90%;
-    margin: 4px auto;
+    margin: 4.2em auto;
 }
 
 .home_title{
@@ -81,9 +81,10 @@ html{
 
 .home_description{
     font-weight: 300;
-    margin-left: -15rem;
-    padding-top: 180px;
-    width: 382px;
+    position: relative;
+    margin-left: -14.9rem;
+    top: 4.8rem;
+    width: 23.875rem;
     text-align: left;
 }
 
@@ -100,11 +101,14 @@ html{
 }
 
 .home_img img{
-    width: 450px;
+    width: 28.125rem;
     float: right;
 }
 .btn_container{
-    padding-top: 23rem;
+    position: relative;
+    left: 0.3rem;
+    z-index: 1;
+    top: 9.8rem;
     width: 7.6rem;
 }
 
@@ -114,7 +118,7 @@ html{
     border: 2px solid rgb(255, 73, 73);
     color: #000;
     padding: 3px 20px;
-    margin-left: -386px;
+    margin-left: -24.125rem;
     transition: .8s;
 }
 
@@ -124,12 +128,14 @@ html{
 }
 
 #products{
+    width: 100%;
     height: 90vh;
     background: #fcfcfc;
 }
 
 .products_container{
     padding-top: 2rem;
+    width: 90%;
     text-align: center;
 }
 
@@ -140,10 +146,10 @@ html{
 .burger_container{
     margin: 60px auto;
     width: 90%;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
 }
 
 .burger_container img{
@@ -168,9 +174,10 @@ html{
 }
 
 .content h3{
-    padding-top: 20px;
+    position: relative;
+    margin-top: 2rem;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
 }
 
 .price{
@@ -183,9 +190,14 @@ html{
     margin-bottom: 8px;
 }
 
+.price:hover{
+    cursor: pointer;
+}
+
 .stars{
-    margin-top: 17px;
-    padding-bottom: 20px;
+    position: relative;
+    top: 1.1em;
+    margin-bottom: 2rem;
     color: #ffd700;
 }
 
@@ -201,4 +213,59 @@ html{
 .btn_:hover{
     background: rgb(255, 73, 73);
     color: #fff;
+}
+
+#services{
+    height: 80vh;
+}
+
+.services_container{
+    text-align: center;
+    width: 100%;
+    height: 80vh;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),url(img/Services.png);
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.services_container h2{
+    position: relative;
+    top: 2rem;
+    color: #fff;
+}
+
+.services_container p{
+    color: #fff;
+    position: relative;
+    top: 2.5rem;
+    font-weight: 400;
+}
+
+.services_icons_container span{
+    color: #eaeaea;
+    font-size: 1.2em;
+    font-weight: 400;
+}
+
+.services_icons_container{
+    margin: 1.4em auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 20rem;
+}
+
+.services_icons{
+    position: relative;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 4rem;
+    z-index: 3;
 }
